# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: flake8.yaml
page_analyzer/: app.py
page_analyzer/templates/: 404.html  base.html  index.html  url_details.html  urls.html
